@@ -9,8 +9,10 @@ import com.vividsolutions.jump.workbench.ui.OptionsDialog;
 import com.vividsolutions.jump.workbench.ui.OptionsPanel;
 import com.vividsolutions.jump.workbench.ui.plugin.PersistentBlackboardPlugIn;
 import com.vividsolutions.jump.workbench.ui.plugin.ViewAttributesPlugIn;
+import org.apache.batik.ext.swing.GridBagConstants;
 
 import javax.swing.*;
+import java.awt.*;
 import java.text.SimpleDateFormat;
 
 /**
@@ -22,12 +24,22 @@ public class ViewOptionsPlugIn extends AbstractPlugIn {
 
     public static final String DATE_FORMAT_KEY = ViewOptionsPlugIn.class.getName() + " - DATE_FORMAT_KEY";
 
+    public static final String SELECTION_SYNCHRONIZATION_KEY = ViewOptionsPlugIn.class.getName() + " - SELECTION_SYNCHRONIZATION";
+
     private static final String DATE_FORMAT = I18N.get("org.openjump.core.ui.plugin.view.ViewOptionsPlugIn.Date-format");
     private JComboBox dateFormatChooser;
+    private static final String SELECTION_SYNC = I18N.get("org.openjump.core.ui.plugin.view.ViewOptionsPlugIn.Selection-syncronization");
+    private JCheckBox synchronizationCheckBox;
+
+    private Blackboard blackBoard;
 
     public void initialize(final PlugInContext context) throws Exception {
 
+        blackBoard = PersistentBlackboardPlugIn.get(context.getWorkbenchContext());
+
         ViewOptionsPanel viewOptionsPanel = new ViewOptionsPanel(context);
+        viewOptionsPanel.setLayout(new GridBagLayout());
+        GridBagConstraints c = new GridBagConstraints();
 
         // Most useful formats for english and european speakers
         dateFormatChooser = new JComboBox(new String[]{
@@ -41,8 +53,32 @@ public class ViewOptionsPlugIn extends AbstractPlugIn {
         dateFormatChooser.setEnabled(true);
         dateFormatChooser.setEditable(true);
 
-        viewOptionsPanel.add(new JLabel(DATE_FORMAT));
-        viewOptionsPanel.add(dateFormatChooser);
+        synchronizationCheckBox = new JCheckBox();
+
+        c.gridx = 0;
+        c.gridy = 0;
+        c.ipadx = 10;
+        c.weighty = 0;
+
+        c.anchor = GridBagConstants.EAST;
+
+        viewOptionsPanel.add(new JLabel(DATE_FORMAT), c);
+        c.gridx = 1;
+        c.anchor = GridBagConstants.WEST;
+        viewOptionsPanel.add(dateFormatChooser, c);
+
+        c.gridx = 0;
+        c.gridy = 1;
+        c.anchor = GridBagConstants.EAST;
+        viewOptionsPanel.add(new JLabel(SELECTION_SYNC), c);
+        c.gridx = 1;
+        c.anchor = GridBagConstants.WEST;
+        viewOptionsPanel.add(synchronizationCheckBox, c);
+
+        c.gridy = 2;
+        c.weighty = 1;
+        c.fill = GridBagConstants.VERTICAL;
+        viewOptionsPanel.add(new JPanel(), c);
 
         OptionsDialog.instance(context.getWorkbenchContext().getWorkbench())
                 .addTab(VIEW_OPTIONS, viewOptionsPanel);
@@ -67,7 +103,7 @@ public class ViewOptionsPlugIn extends AbstractPlugIn {
 
         public void okPressed() {
             // If ok pressed,save the format in Workbench.xml configuration file
-            Blackboard blackBoard = PersistentBlackboardPlugIn.get(context.getWorkbenchContext());
+            //Blackboard blackBoard = PersistentBlackboardPlugIn.get(context.getWorkbenchContext());
             blackBoard.put(DATE_FORMAT_KEY, dateFormatChooser.getSelectedItem().toString());
             JInternalFrame[] frames = context.getWorkbenchFrame().getInternalFrames();
             for (JInternalFrame frame : frames) {
@@ -75,13 +111,12 @@ public class ViewOptionsPlugIn extends AbstractPlugIn {
                     frame.repaint();
                 }
             }
+            blackBoard.put(SELECTION_SYNCHRONIZATION_KEY, synchronizationCheckBox.isSelected());
         }
 
         public void init() {
             // Init formatter from the Workbench.xml configuration file
-            Object persistedFormat = PersistentBlackboardPlugIn
-                    .get(context.getWorkbenchContext())
-                    .get(DATE_FORMAT_KEY);
+            Object persistedFormat = blackBoard.get(DATE_FORMAT_KEY);
             if (persistedFormat != null) {
                 dateFormatChooser.setSelectedItem(
                         PersistentBlackboardPlugIn
@@ -89,6 +124,13 @@ public class ViewOptionsPlugIn extends AbstractPlugIn {
                                 .get(DATE_FORMAT_KEY));
             } else {
                 dateFormatChooser.setSelectedIndex(0);
+            }
+            Object sync = blackBoard.get(SELECTION_SYNCHRONIZATION_KEY);
+            if (sync != null) {
+                synchronizationCheckBox.setSelected(
+                        Boolean.parseBoolean(sync.toString()));
+            } else {
+                synchronizationCheckBox.setSelected(true);
             }
         }
     }
